gitops/metrics/fluent-bit-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-collector
  namespace: metrics
  labels:
    k8s-apps: log-collector
spec:
  ports:
  - port: 24224
    name: forward
  - port: 80
    name: viewer
    targetPort: viewer
  - port: 2020
    name: fluent-status
  type: LoadBalancer
  selector:
    k8s-apps: log-collector
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: log-collector
  namespace: metrics
  labels:
    k8s-apps: log-collector
spec:
  selector:
    matchLabels:
      k8s-apps: log-collector
  serviceName: log-collector
  replicas: 1
  template:
    metadata:
      labels:
        k8s-apps: log-collector
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 24224
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: fluentd-config
          mountPath: /fluent-bit/etc/
      - name: logrotate
        image: ekanderson/logrotate
        args: [crond, "-n"]
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: logrotate-config
          mountPath: /etc/logrotate.d
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 8080
          name: viewer
        volumeMounts:
        - name: logs
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx
      volumes:
        - name: fluentd-config
          configMap:
            name: log-collector-config
        - name: nginx-config
          configMap:
            name: log-nginx-config
        - name: logrotate-config
          configMap:
            name: log-logrotate-config
  volumeClaimTemplates:
  - metadata:
      name: logs
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 40Gi
